--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,23 +3,31 @@
 <head>
     <title th:text="${page_title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <X-CSRF-TOKEN></X-CSRF-TOKEN>
 </head>
 
 <body>
 <div class="login">
     <h2 th:text="${title}"/>
-    <th:form name="login" action="login" method="POST">
-        <th:fieldset>
-            <th:input type="email" placeholder="Email"/>
-            <th:input type="password" placeholder="Password"/>
-        </th:fieldset>
-        <th:input type="submit" th:value="${submitText}"/>
+    <th:form name="${form_name}" action="register" method="post">
+        <fieldset>
+            <input type="email" placeholder="Email"/>
+            <input type="password" placeholder="Password"/>
+        </fieldset>
+        <input type="submit" th:value="${submitText}"/>
+        <input type="hidden"
+               name="${_csrf.parameterName}"
+               value="${_csrf.token}"/>
     </th:form>
     <div class="utilities">
         <a th:href="${redirect_login}" th:text="${login_text}"/>
         <a th:href="${redirect_register}" th:text="${register_text}"/>
         <a th:href="${redirect_reset}" th:text="${reset_text}"/>
+
     </div>
+</div>
+<div class="message">
+    <text th:text ="${message}"/>
 </div>
 
 
